[package]
name = "bip39_solver"
version = "0.1.0"
authors = ["harshveer"]
edition = "2022"

[dependencies]
ocl = "0.19"
hex = "0.3.1"
rayon = "1.3.0"
reqwest = { version = "0.10.6", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
bitcoin-wallet = { git = "https://github.com/rust-bitcoin/rust-wallet.git" }
